fix: adjust icon position in header for better alignment

--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body {
     position: absolute;
     width: 24px;
     height: 24px;
-    top: 35px;
+    top: 36px;
     left: 0px;
     background-size: cover;
   }
